; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_xboxi2c.c_XboxSetLED.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_xboxi2c.c_XboxSetLED.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @XboxSetLED(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @strlen(i8* %7)
  %9 = icmp eq i32 %8, 4
  br i1 %9, label %10, label %45

10:                                               ; preds = %1
  store i32 0, i32* %5, align 4
  store i32 0, i32* %4, align 4
  br label %11

11:                                               ; preds = %34, %10
  %12 = load i8*, i8** %3, align 8
  %13 = load i8, i8* %12, align 1
  %14 = icmp ne i8 %13, 0
  br i1 %14, label %15, label %37

15:                                               ; preds = %11
  %16 = load i32, i32* %4, align 4
  %17 = mul nsw i32 %16, 2
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %5, align 4
  %19 = mul nsw i32 %18, 2
  store i32 %19, i32* %5, align 4
  %20 = load i8*, i8** %3, align 8
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i32
  switch i32 %22, label %34 [
    i32 114, label %23
    i32 103, label %26
    i32 111, label %29
  ]

23:                                               ; preds = %15
  %24 = load i32, i32* %4, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %4, align 4
  br label %34

26:                                               ; preds = %15
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %5, align 4
  br label %34

29:                                               ; preds = %15
  %30 = load i32, i32* %4, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %4, align 4
  %32 = load i32, i32* %5, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %5, align 4
  br label %34

34:                                               ; preds = %15, %29, %26, %23
  %35 = load i8*, i8** %3, align 8
  %36 = getelementptr inbounds i8, i8* %35, i32 1
  store i8* %36, i8** %3, align 8
  br label %11

37:                                               ; preds = %11
  %38 = load i32, i32* %4, align 4
  %39 = shl i32 %38, 4
  %40 = and i32 %39, 240
  %41 = load i32, i32* %5, align 4
  %42 = and i32 %41, 15
  %43 = add nsw i32 %40, %42
  %44 = call i32 @I2cSetFrontpanelLed(i32 %43)
  br label %45

45:                                               ; preds = %37, %1
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @I2cSetFrontpanelLed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
